# librefop

./: .clang-format  .gitignore  .gitreview  DEVELOP.md  Doxyfile  Makefile.am  README  configure.ac  libredundancyfileop.pc.in  librefop.pc.in
.github/workflows/: codeql-analysis.yml
example/: example.c
include/: libredundancyfileop.h  librefop.h
lib/: Makefile.am  crc16.h  file-util.c  file-util.h  fileop.c  fileop.h  libredundancyfileop.c  libredundancyfileop.sym  static-configurator.c  static-configurator.h
test/: Makefile.am  file_util_test.cpp  fileop_test_set_get_remove.cpp  fileop_test_unit.cpp  fileop_test_unit_memory.cpp  fileop_test_utils.cpp  interface_test.cpp  interface_test_filebreak.cpp  interface_test_unit.cpp  interface_test_unit_memory.cpp
test/mock/: libpthread_mock.hpp  libsystemd_mock.hpp  memory_mock.hpp  syscall_io_mock.hpp
tools/: check-codingstyle.sh  check-complexity.sh  do-reformat-codingstyle.sh  gen-test-report.sh  run-test.sh
